# Qwen-TTS-Studio

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
configs/: qwen3_tts_dgx.yaml  supervisord.conf.tpl
docs/: CLAUDE_CODE_BRIEF.md  GUIDE.md  LIVEKIT.md  OVERVIEW.md  QUICKGUIDE.md  REMOTE_CLONE_USAGE.md  build_pdf.py
orchestrator/: app.py  audio.py  backends.py  config.py  schemas.py  supervisor_client.py  voice_library.py
orchestrator/routes/: models.py  speech.py  system.py  voices.py  websocket.py
scripts/: 00_install.sh  10_download_weights.sh  benchmark.sh  clone_service.sh  logs.sh  restart.sh  run_base.sh  run_customvoice.sh  run_standalone.sh  run_voicedesign.sh  smoke_test.sh  start.sh  start_clone.sh  status.sh  stop.sh  stop_clone.sh
static/: index.html
static/css/: app.css  reset.css
static/js/: api.js  app.js  cselect.js  models.js  pcm_player.js  tabs.js  utils.js  voice_library.js
